# atlasmap-sc

./: .gitignore  Makefile  README.md  docker-compose.yml
config/: server.yaml
deploy/: README.md
doc/: api.md  api_zh.md  deploy.md  deploy_zh.md  how-to-use.md  how-to-use_zh.md  quick-start.md  quick-start_zh.md
frontend/: Dockerfile  README.md  blastp.html  blastp_job.html  blastp_result.html  de.html  de_job.html  de_result.html  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/cloudflare/: _redirects  _routes.json
frontend/cloudflare/functions/: _proxy.js
frontend/scripts/: cloudflare-postbuild.mjs
frontend/src/: blastp.ts  blastp_job.ts  blastp_result.ts  de.ts  de_job.ts  de_result.ts  main.ts
frontend/src/api/: client.ts
frontend/src/components/: CategoryColumnSelector.ts  CategoryFilter.ts  CategoryLegend.ts  CellQueryPanel.ts  ColorModeSwitch.ts  ColorScaleSelector.ts  DEJobForm.ts  ExpressionColorbar.ts  ExpressionRangeSelector.ts  GeneSelector.ts  SidebarResizer.ts  (+4 more)
preprocessing/: Dockerfile  README.md  pyproject.toml
preprocessing/atlasmap_preprocess/: __init__.py  cli.py  config.py  pipeline.py
preprocessing/atlasmap_preprocess/binning/: aggregator.py  quadtree.py
preprocessing/atlasmap_preprocess/genes/: selector.py
preprocessing/atlasmap_preprocess/io/: soma_writer.py
preprocessing/soma_tiles_preprocess/: __init__.py  cli.py  config.py  pipeline.py  visualization.py
preprocessing/soma_tiles_preprocess/binning/: __init__.py  aggregator.py  normalizer.py
preprocessing/soma_tiles_preprocess/genes/: __init__.py  selector.py
preprocessing/soma_tiles_preprocess/io/: __init__.py  soma_writer.py  zarr_writer.py
scripts/: h5ad_info.py  monitor_preprocess_mem.sh  seurat2h5ad.py  test_fetch_tiles_merge.py  test_soma.py
server/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
(+43 files in other folders)
