[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soma-tiles-preprocess"
version = "0.1.0"
description = "Preprocessing pipeline for SOMA-Tiles: H5AD to multi-resolution Zarr bins"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "SOMA-Tiles Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.10.0",
    "tiledbsoma>=1.5.0",
    "zarr>=2.16.0",
    "numpy>=1.24.0",
    "numba>=0.58.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "blosc2>=2.3.0",
    "scikit-misc>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
soma-preprocess = "soma_tiles_preprocess.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["soma_tiles_preprocess*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=soma_tiles_preprocess --cov-report=term-missing"
